# otus_lab8

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: handler.h  main.cpp  processor.cpp  processor.h  strategy.cpp  strategy.h
